2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Updated the bundled themes to conforms the new css style.
	Added all attributes in <body> to <html>.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Added "channelname" and "type" attribute for more control with css.
	Updated "Alternate Lines" theme to conform to the new css style.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Changed shortcut key for "Mark Scrollback" to cmd+L, and "Clear Mark" to cmd+shift+L as well.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added "Copy Console Log as HTML" menu item.
	Reformed main menu.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Changed to use the current username only when the username consists of alphabets and numbers in the rough.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Use the current username for nick on the welcome dialog.
	Removed SACrashReporter.submit in AppController#awakeFromNib.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Removed '*' in the head of system messages.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added a title tag to the template for log views.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added DOCTYPE and some meta tags to the template for log views.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Added some classes and attributes to log lines for more control in css.
	Replaced %Q[] to %||.

2008-02-24  Kevin Ballard <kballard@gmail.com>

	Fixed a bug, an effect stopping character should not render as an end tag when there is no effect.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Improved a regex to not capture unnecessary part.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Added a menu item, 'Copy Log as HTML'.
	Changed a menu item caption from 'Clear Scrollback' to 'Clear Mark'.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	We don't want to change units when closing a channel.
	Based on a patch from Kevin Ballard.
