@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{514, 62}, {1166, 966}}</string>
+	<string>{{418, 56}, {1166, 966}}</string>
 </dict>
 </plist>
